IllegalStateException when id.system is not readable/writable